# Actix-Web-wActors

./: Cargo.toml  README.md
migrations/2022-09-14-154052_create_users_table/: up.sql
src/: main.rs  models.rs  schema.rs
src/actors/: db.rs
src/db_utils/: mod.rs
